weblayout-4/Euclid/css/style.css
/* ... */
.main-nav__link:focus {
  outline: none;
}

.main-nav__link:focus-visible::before {
 opacity: 1;
}

.main-nav__link:hover::after {
  transform: scaleX(1);
}

.main-nav__link:active {
  border: none;
  color: var(--basic-active);
}

.main-nav__link:active::before {
  opacity: 0;
}

.main-nav__link:active::after {
  border: none;
  border-bottom: 2px solid var(--basic-active);
  opacity: 1;
}

.search-form__label {
  display: none;
}

.search-ico {
  display: none;
}

.search-ico--open {
  display: block;
  width: 24px;
  height: 24px;
}

.search-ico svg  {
  fill: none;
  stroke: var(--basic-dark);
  transition: stroke var(--fast-transition);
  margin-left: auto;
}

.search-ico:hover svg {
  stroke: var(--basic-accent);
}

.search-form {
  display: none;
  position: relative;
  width: 539px;
  height: 60px;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.12);
  border-radius: 16px;
}

.search-form--active {
 display: block;
}

.search-form__input {
  padding: 0;
  position: relative;
  content: "";
  width: 412px;
  height: 20px;
  left: 32px;
  top: 16px;
  border: none;
  font-weight: 500;
  font-size: 18px;
  line-height: 22px;
  color: var(--bg-dark-primery);
}

.search-form__input:focus {
  outline: none;
}

.search-form::before {
  position: absolute;
  content: "";
  height: 1px;
  width: 412px;
  background-color: var(--bg-underline);
  left: 32px;
  bottom: 16px;
}

.search-form__input::placeholder {
  position: absolute;
  content: "";
  font-weight: 500;
  font-size: 18px;
  line-height: 22px;
  color: var(--text-hint);
}

.search-form__ico {
  position: absolute;
  content: "";
  width: 24px;
  height: 24px;
  top: 18px;
  background-repeat: no-repeat;
  background-position: center left;
  transition: background-image var(--medium-transition);
}

.search-form__ico::before {
  position: absolute;
  content: "";
  top: -5px;
  right: -5px;
  bottom: -5px;
  left: -5px;
  border: 2px solid var(--basic-accent);
  opacity: 0;
  transition: opacity var(--fast-transition);
}

.search-form__ico--submit {
  right: 58px;
  top: 19px;
  background-image: url("../img/decorative/search-hover.svg");
}

.search-form__ico--close {
  right: 14px;
  background-image: url("../img/decorative/closed_search.svg");
}

.search-form__ico:focus-visible {
  outline: none;
}

.search-form__ico:focus-visible::before {
  opacity: 1;
}

.search-form__ico--close:hover {
  background-image: url("../img/decorative/closed_search_hover.svg");
}

/* hero section */
.swiper-container {
  box-sizing: content-box;
  position: relative;
  overflow: hidden;
  background-color: var(--bg-img);
}

.swiper-horizontal>.swiper-pagination-bullets,
.swiper-pagination-bullets.swiper-pagination-horizontal,
.swiper-pagination-custom, .swiper-pagination-fraction {
  bottom: 30px;
}

.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
  margin: 0;
}

.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet:not(:last-child),
.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet:not(:last-child) {
  margin-right: 20px;
}

.hero__swiper .swiper-pagination-bullet {
  width: 15px;
  height: 15px;
  background-color: var(--basic-light);
  opacity: 0.4;
}

.hero__swiper .swiper-pagination-bullet-active {
  opacity: 1;
}
.swiper-pagination-bullet:focus-visible {
  outline: 1px solid var(--basic-accent);
}

.hero__content {
  position: absolute;
  content: "";
  z-index: 11;
}

.hero-content {
  display: flex;
  flex-direction: column;
  max-width: 55%;
  height: 520px;
  padding-top: 100px;
  padding-left: 80px;
  color: var(--basic-light);
}

.hero__title {
  margin-bottom: 24px;
}

.hero__btn {
  align-self: flex-start;
  min-width: 280px;
  min-height: 78px;
  margin-top: auto;
  padding: 25px 37px;
  font-size: 23px;
  line-height: 29px;
}

/* about section */
.about__title {
  padding-left: 2px;
  margin-bottom: 20px;
}

.about__text {
  max-width: 1235px;
  margin-bottom: 50px;
}

.about__features {
  display: flex;
}

.about-features__img-container {
  position: relative;
  content: "";
  margin-right: var(--basic-gap);
}

.about-features__img {
  overflow: hidden;
  background-color: var(--bg-img);
}

.about-features__excerpt {
  position: absolute;
  content: "";
  bottom: 0;
  left: 0;
  z-index: 1;
  width: 868px;
  background-color: rgba(0, 0, 0, 0.5);
}

.about-features__excerpt {
  display: flex;
  padding: 50px;
  align-items: center;
  justify-content: space-between;
}

.about-features-excerpt__text {
  width: 60%;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 32px;
  color: var(--basic-light);
}

.about-features-excerpt__link {
  font-size: 15px;
  line-height: 15px;
}

.about-features__desc {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.about-features__content {
  width: 870px;
  max-height: 295px;
  padding: 65px 60px 65px 299px;
  border: 1px solid var(--basic-invert);
  background-repeat: no-repeat;
  background-position: top 64px left 58px;
}

.about-features--decor-1 {
  background-image: url("../img/decorative/package.svg");
}

.about-features--decor-2 {
  background-image: url("../img/decorative/gear.svg");
}

.about-features__text {
  max-width: 450px;
}

/* stages section */
.stages__title {
  margin-bottom: 46px;
}

.stages-tabs__nav-list {
  display: flex;
  width: 458px;
  margin-bottom: 40px;
  justify-content: space-between;
  align-items: center;
}

.stages-tabs__btn {
  position: relative;
  font-weight: 400;
  font-size: 18px;
  line-height: 22px;
}

.stages-tabs__btn:focus-visible {
  outline: 0;
}

.stages-tabs__btn::before {
  position: absolute;
  content: "";
  top: -5px;
  right: -5px;
  bottom: -5px;
  left: -5px;
  border: 2px solid var(--basic-accent);
  opacity: 0;
  transition: opacity var(--fast-transition);
}
.stages-tabs__btn:hover {
  color: var(--basic-accent);
}
/* ... */

